Revision history for Perl extension HTML::TreeBuilder::LibXML

0.14

    * added workaround for Web::Scraper 0.36
      (tokuhirom)

0.13
     * Added 'getValue' node's method as in HTML::TreeBuilder::XPath for
       comment nodes in web-scraper module
     * Added dummy method 'store_comments' as in HTML::TreeBuilder
       for web-scraper module (for comment nodes) and for
       HTML::TreeBuilder::XPath working in tests with comment nodes
     * Now this module requires HTML::TreeBuilder::XPath v.0.14 (before 0.14
       there getValue() didn't work for comment nodes)

0.12

     * no Test::Base(tokuhirom)
     * depend to latest libraries(tokuhirom)
       ref. http://d.hatena.ne.jp/mikeda/20100622/1277229060
     * fixed typo in pod(tokuhirom)

0.11 Tue Oct  6 10:47:16 PDT 2009
     - Fix parse when a content is truly an empty string

0.10
     - added as_trimmed_text(chiba)

0.09 Sun Aug  2 06:02:01 PDT 2009
     - Fixed parse_html method when parsing whitespace strings so it won't break and consistent with HTML::TB
       (Reported by otsune)

0.08 Mon Jul 20 10:00:19 PDT 2009
        - Updated POD document

0.07
        - Implemented all_attr, all_attr_names, all_external_attr and all_external_attr_names (miyagawa)

0.06

        - Added new_from_content and new_from_file to for more compat. with HTML::TreeBuilder(miyagawa)

0.05

        - fixed deps

0.04

        - support more look_down() params(miyagawa)
        - added ->id support(tokuhirom)
        - call ->eof automatically for compatibility.(tokuhirom)
        - added ->findvalue support(tokuhirom)
        - added ->eof(tokuhirom)

0.03

        - [FEATURE] added to restore hacked constructor(suggested by miyagawa++).

0.02

        - [MISC] $parser->no_network(1)

0.01_03

        - [BUG] Node->delete is unbound()
        - [FEATURE] added getFirstChild() method
        - [FEATURE] added Node->as_HTML
        - [MISC] added THANKS secion in the pod(感謝の意)

0.01_02
